 Pageination for large texts?
 Subtitle speech? Maybe only possible with something like pysrt and a subtitle file. https://pypi.python.org/pypi/pysrt

EXTERNAL TODO:
--------------
 Test Windows installer on Vista/7/8
 OSX installer?
 Android TTS app for android backend

** 0.0.35 **

Added the ability so select player in eSpeak
Added support for playing via paplayer and MPlayer

** 0.0.34 **

Enable wave output in Flite
Merge Flite backend for ATV2 into main Flite backend
Fix for speech dispatcher always showing available

** 0.0.33 **

Fix for a bug with several backends causing XBMC to hang on shutdown
Added the settings option for espeak 'Play Speech Directly Via eSpeak' which bypasses writing to wav
Fix for speech-dispatcher not being available/working on some platforms (Ubuntu?)

** 0.0.32 **

Added setting to Advanced 'Override Poll Interval' and subsetting 'Poll Interval (ms)'
Various internal changes to eSpeak and pico2wave

** 0.0.31 **

Added a settings section 'Advanced'
Added setting 'Advanced::Enable Debug Logging' - currently defaults to True
Added setting 'Advanced::Disable Broken TTS Engines' defaults to True
Changed name of ctypes eSpeak to eSpeak (ctypes) and marked as broken
Changed name of 'eSpeak (XBMC Audio)' to eSpeak, and it now works both via internal and external sound output

** 0.0.30 **

Added speaking of addon status including addon download progress
Change to prevent errors from killing the addon, thereby stopping speech and possibly hanging XBMC on exit

** 0.0.29 **

Added speaking of virtual keyboard typing
Added speaking of progress dialog and speaking of progress percent

** 0.0.28 **

JAWS backend now properly shows availability

** 0.0.27 **

Added JAWS backend

** 0.0.26 **

Added 'Use SOX If Available' setting to pico2wav
Added 'Speed (Requires SOX)' setting to pico2wav
Added fix for text starting with - not speaking on some speech engines

** 0.0.25 **
